Started new presentation for davydov.

--- a/Mikhailov-presentation.tex
+++ b/Mikhailov-presentation.tex
@@ -68,7 +68,7 @@
 
 \institute[ISDCT SB RAS, INRTU]
 {${}^{*}$Matrosov Institute for System Dynamics and Control Theory of Siberian Branch of Russian Academy of Sciences; \\[0.5em]
-${}^{**}$Irkutsk National Research Irkutsk Technical University,\\
+${}^{**}$Irkutsk National Research Technical University,\\
 Irkutsk, Russian Federation\\[0.7cm]
 }
 
