--- a/davydov-present.tex
+++ b/davydov-present.tex
@@ -133,6 +133,8 @@ Opatija, Croatia
 \frametitle{Features of PCF}
 The PCF calculus is both \textbf{machine-oriented}, and \textbf{human-oriented}, naturally it was aimed at solving the problems of \textbf{dynamic systems control}.
 
+%\LaTeX
+
 Features of PCFs follows:
 \begin{enumerate}
 \item unique inference rule and simple scheme of axioms;
